k8s/overlays/gke/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: drop
  annotations:
    cloud.google.com/backend-config: '{"default":"drop-backend"}'
    cloud.google.com/neg: '{"ingress":true}'
