k8s/overlays/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drop
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: drop-ip
    networking.gke.io/managed-certificates: drop-certificate
    networking.gke.io/v1beta1.FrontendConfig: drop-frontend
spec:
  rules:
    - host: drop.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drop
                port:
                  name: http
